--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.10.15"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.15",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
